unpackaged/objects/Payment_Receipt__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocation_Type__c</fullName>
        <label>Allocation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ambit_Account_Number__c</fullName>
        <label>Ambit Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ambit_Branch_Name__c</fullName>
        <label>Ambit Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ambit_Deposit_Bank_Details__c</fullName>
        <label>Ambit Deposit Bank Details</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch_Manager__c</fullName>
        <label>Branch Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Mobile__c</fullName>
        <label>Co-Applicant Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Name__c</fullName>
        <label>Co-Applicant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Office_Address__c</fullName>
        <label>Co-Applicant Office Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Residence_Address__c</fullName>
        <label>Co-Applicant Residence Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collection_Task__c</fullName>
        <label>Collection Task</label>
        <referenceTo>Collection_Task__c</referenceTo>
        <relationshipLabel>Payment Receipt</relationshipLabel>
        <relationshipName>Payment_Receipt</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Bank_Name__c</fullName>
        <label>Customer Bank Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Autopopulate if possible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Names__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Names</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payment Receipt</relationshipLabel>
        <relationshipName>Payment_Receipt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Mobile__c</fullName>
        <label>Guarantor Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Guarantor_Name__c</fullName>
        <label>Guarantor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Official_Address__c</fullName>
        <label>Guarantor Official Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Guarantor_Residence_Address__c</fullName>
        <label>Guarantor Residence Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IFSC_Code__c</fullName>
        <label>IFSC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instrument_Date__c</fullName>
        <label>Instrument Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instrument_No__c</fullName>
        <label>Instrument No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instrument_Type__c</fullName>
        <label>Instrument Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Demand Draft</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>RTGS</fullName>
                </value>
                <value>
                    <fullName>NEFT</fullName>
                </value>
                <value>
                    <fullName>UPI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landline_Number__c</fullName>
        <label>Landline Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Amount__c</fullName>
        <label>Last Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MICR_Code__c</fullName>
        <label>MICR Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Office_Address__c</fullName>
        <label>Office Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pay_In_Slip_Number__c</fullName>
        <label>Pay In Slip Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address_In_case_of_LAP__c</fullName>
        <label>Property Address (In case of LAP)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prospect_Number__c</fullName>
        <label>Prospect Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Amount__c</fullName>
        <label>Receipt Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Receipt_Entry__c</fullName>
        <label>Receipt Entry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Number__c</fullName>
        <label>Receipt Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Type__c</fullName>
        <label>Receipt Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Receipt</fullName>
                </value>
                <value>
                    <fullName>DSRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Mobile__c</fullName>
        <label>Reference Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reference_Name__c</fullName>
        <label>Reference Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residence_Address__c</fullName>
        <label>Residence Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <label>Sales Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Receipt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Allocation_Type__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Ambit_Account_Number__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Bank_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>PR#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Receipt</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Instrument_Date_is_mandatory</fullName>
        <active>true</active>
        <description>Instrument_Date_is_mandatory if Instrument Type is not cash</description>
        <errorConditionFormula>AND(!ISPickval( Instrument_Type__c ,&apos;Cash&apos;), ISBLANK( Instrument_Date__c ))</errorConditionFormula>
        <errorMessage>Instrument Date is Required To Be Filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Instrument_Type_selected_as_Cheque_or_DD</fullName>
        <active>true</active>
        <description>If Cheque / DD then Number  should only enter in Instrument No field</description>
        <errorConditionFormula>AND(ISPICKVAL( Instrument_Type__c ,&apos;Cheque&apos;),(REGEX(  Instrument_No__c,&quot;^[a-z A-Z]*$&quot;)))</errorConditionFormula>
        <errorMessage>Instrument No should be only numbers</errorMessage>
    </validationRules>
</CustomObject>